# Protein-Structure-Analysis

./: .gitignore  CMakeLists.txt  IMPROVEMENTS.md  README.md  TOPOLOGY_PLAN.md  alma.spec  build_portable_exe.bat  example.cp314-win_amd64.pyd  fast_setup.bat  gui_main.py  physics_engine.cpp  protein_physics.cp312-win_amd64.pyd  protein_physics_cuda.cp312-win_amd64.exp  protein_physics_cuda.cp312-win_amd64.lib  protein_physics_cuda.cp312-win_amd64.pyd  protein_physics_cuda.cp314-win_amd64.exp  protein_physics_cuda.cp314-win_amd64.lib  protein_physics_cuda.cp314-win_amd64.pyd  requirements.txt  session_2026-05-26.md  setup.py  단백질_구조_분석_설명.md
.github/workflows/: release.yml
prebuilt/: protein_physics.cp314-win_amd64.pyd
protein_physics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/: amber_params.py  gui_main.py  iupred.py  knot_analysis.py
python/analysis/: __init__.py  landscape_metrics.py
src/: analysis_ext.cpp  main.cpp  physics_engine.cpp  physics_engine_cuda.cu
tests/: accuracy_test.py  bridge_test.py  calibrate_gpu.py  charge_validation_test.py  knot_test.py  landscape_stability_test.py
